--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,9 +1,10 @@
 [theme]
-primaryColor="#60b4ff"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
-font="sans serif"
+base = "dark"
+#primaryColor="#60b4ff"
+#backgroundColor="#FFFFFF"
+#secondaryBackgroundColor="#F0F2F6"
+#textColor="#262730"
+#font="sans serif"
 
 [server]
 enableStaticServing = true
